# nautilus-attestation-backend

./: .gitignore  Containerfile  ENCLAVE_ATTESTATION_SUCCESS.md  ENCLAVE_REGISTRATION_FLOW.md  Makefile  README_REGISTRATION.md  config.json  configure_enclave.sh  enclave_id_tx.md  expose_fixed.sh  parent_forwarder.sh  quick_register.sh  register_enclave.sh  setup_enclave_config.sh  setup_vsock.sh  sui_proxy.py
src/: app.rs
src/attestation-backend/: .env.example  Cargo.toml  run.sh
src/attestation-backend/src/: app.rs  common.rs  government_api.rs  kafka_sui_processor.rs  lib.rs  main.rs  redis_sui_processor.rs  verification_processor.rs  zklogin.rs
