[package]
name = "attestation_server"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# Redis for message queuing (replacing Kafka)
redis = { version = "0.24", features = ["tokio-comp", "streams"] }

# Core dependencies
tokio = { version = "1.25", features = ["macros", "rt-multi-thread", "net", "time"] }
anyhow = "1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
tracing = "0.1"
tracing-subscriber = "0.3"

# Use fastcrypto from git (latest main branch)
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto" }

# Axum for web server
axum = { version = "0.7", default-features = false, features = ["json", "tokio", "http1", "http2"] }
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.4"

# Essential utilities
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"
bcs = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8", features = ["std_rng"] }

# Serialization helpers
serde_bytes = "0.11"
serde_repr = "0.1"
serde_yaml = "0.9"

# HTTP client (for Sui proxy communication)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Environment variables
dotenvy = "0.15"

# AWS NSM dependencies
aws-nitro-enclaves-nsm-api = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api", rev = "8ec7eac72bbb2097f1058ee32c13e1ff232f13e8", optional = true }
[features]
default = []
aws = ["aws-nitro-enclaves-nsm-api"]

# Build configuration
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
